--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nino.hrckaraoke"
+<manifest package="com.nino.hrckaraoke"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -22,11 +21,6 @@
         </activity>
         <activity android:name="com.nino.hrckaraoke.MainActivity" 
             android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name="com.nino.hrckaraoke.Request"
@@ -63,15 +57,20 @@
             android:name="com.nino.hrckaraoke.Welcome"
             android:label="@string/title_activity_welcome"
             android:screenOrientation="portrait" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            
         </activity>
         <activity
             android:name="com.nino.hrckaraoke.Search"
             android:label="@string/title_activity_search" >
         </activity>
-        <activity
-            android:name="com.nino.hrckaraoke.YourRequest"
-            android:label="@string/title_activity_search" >
-        </activity>
+        <activity android:name="com.facebook.LoginActivity"
+			android:theme="@android:style/Theme.Translucent.NoTitleBar"
+			android:label="@string/app_name" />
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
